CI images update

--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-29 14:02:42
+lastsearch = 2024-07-29 17:18:44
 
 [demxanh.com]
 match = 24.1%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 13.8%%
-title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [nanara.vn]
 match = 34.5%%
@@ -70,4 +70,9 @@ url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 match = 20.7%%
 title = Chiếu cao cấp chính hãng Nhật Bản
 url = https://kyoryo.vn/chieu-cao-cap.html
+
+[changagoidemdep.vn]
+match = -10.3%%
+title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
