--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-29 15:16:35
+lastsearch = 2024-07-29 17:25:15
 
 [chanrathanhthuy.com]
 match = 9.7%%
@@ -14,7 +14,7 @@ url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-go
 [demxanh.com]
 match = 58.1%%
 title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html?srsltid=AfmBOoqVqi3BLoL_rJfs9_CnMh-5sqtakVd3QdXDZaG0arsvmxFHoXV0
 
 [songhongonline.vn]
 match = 53.8%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -41.9%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOopgiriEreNRasnnfF4zNHXBMLbao0kyad2DehsaDwZ8aP4-7MIq
 
 [lizd.vn]
 match = 0.0%%
