--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-29 01:46:03
+lastsearch = 2024-07-29 17:19:03
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -37,8 +37,8 @@ title = Bài 14 – Quán buông bỏ
 url = https://langmai.org/thien-duong/sen-bup-tung-canh-he/bai-14-quan-chieu-buong-bo/
 
 [phaata.com]
-match = 0.0%%
-title = Ho Chi Minh ZIP code
+match = -118.8%%
+title = Ho Chi Minh ZIP code - The most updated ...
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
