--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-29 15:16:56
+lastsearch = 2024-07-29 17:31:07
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
 
 [www.facebook.com]
-match = -30.4%%
-title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
-url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/?locale=vi_VN
+match = 52.2%%
+title = Chiếu Nhựa Thái Bình | Thanh Hóa
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Chiếu Tre Việt Phổ Mến Thái Bình Cao Cấp - Chính Hãng ...
 url = https://demhong.vn/chieu-tre-viet-pho-men/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
+match = 21.7%%
+title = Chiếu nhựa Thái Bình 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-100x190.html
 
 [h5.lazada.vn]
 match = 34.8%%
