--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-29 16:53:46
+lastsearch = 2024-07-29 17:23:33
 
 [www.bible.com]
 match = -128.6%%
@@ -22,14 +22,14 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -21.4%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [manthutrang.com]
-match = -228.6%%
-title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
-url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
+match = -164.3%%
+title = Tư vấn mua và sử dụng màn chụp tự bung từ A đến Z
+url = https://manthutrang.com/blogs/tu-van/tu-van-mua-va-su-dung-man-chup-tu-bung-tu-a-den-z
 
 [easydream.vn]
 match = -178.6%%
