--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-29 13:33:50
+lastsearch = 2024-07-29 17:47:10
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = 0.0%%
+title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
 
 [www.lazada.vn]
 match = -11.1%%
