--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-29 14:46:44
+lastsearch = 2024-07-29 17:40:18
 
 [shopee.vn]
-match = 14.3%%
-title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
+match = -21.4%%
+title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -7.1%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 21.4%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOooP59SOz9qEZ61hXIpVTq104aEMo9VKVT-k4u6g5x6rSdDzYaKg
 
 [tiki.vn]
 match = 28.6%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOorvzslTMsKKQUc14xYp1TiFLcab4CBZNo8-Of33jDmKMSX6ooGP
 
 [kyoryo.vn]
 match = -35.7%%
@@ -54,7 +54,7 @@ url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
 [foreverbedding.net]
 match = -3.6%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOoo4pGCugNs6nF1u9--CwupqFUd4G2VF_Sb8IecBjJ7E9CUDmJ4s
 
 [www.youtube.com]
 match = 14.3%%
