--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-29 15:30:00
+lastsearch = 2024-07-29 17:47:52
 
 [agasound.vn]
 match = 6.7%%
@@ -54,12 +54,12 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOopxRJp_EmJIVvN692zclEv6ofcn2uSydqZXoXfhOadWrRmVNfNz
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -186.7%%
-title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
+match = -200.0%%
+title = [CHÍNH HÃNG] LineaBon – Vitamin tăng chiều cao D2 K3 ...
+url = https://shopee.vn/-CHÍNH-HÃNG-LineaBon-–-Vitamin-tăng-chiều-cao-D2-K3-đầu-tiên-từ-Châu-Âu-i.365676746.2966330385
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
