--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-29 06:57:13
+lastsearch = 2024-07-29 17:45:48
 
 [www.facebook.com]
-match = -75.0%%
-title = Vua Nệm - 🌼 SỞ HỮU BỘ CHĂN GA GẤM CAO CẤP ...
-url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-cao-cấp-pyeoda-tiết-kiệm-tới-66-vua-nệm-xả-kho-188-39-đồn/1462549323889165/
+match = -45.0%%
+title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
+url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [demxanh.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = -45.0%%
-title = Bộ chăn ga gối tencel eu pyeoda 5 món
-url = https://www.khodemthanhdo.com/products/bo-chan-ga-goi-tencel-eu-pyeoda-5-mon
+match = -8.3%%
+title = ĐỆM THÀNH ĐÔ
+url = https://www.khodemthanhdo.com/
 
 [pyeoda.vn]
 match = -95.0%%
@@ -67,9 +67,9 @@ title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
 url = https://vuanem.com/brand/pyeoda
 
 [changagoidemphuongbac.com]
-match = -20.0%%
-title = Bộ ga gối chun chần HQ Pyeoda
-url = https://changagoidemphuongbac.com/bo-ga-goi-chun-chan-hq-pyeoda/
+match = -15.0%%
+title = Đệm cao su tổng hợp Dora Pyeoda
+url = https://changagoidemphuongbac.com/dem-cao-su-tong-hop-dora-pyeoda?yith_wcan=1&product_cat=ga-tra-giuong
 
 [changagoidemtamhao.com]
 match = -10.0%%
