--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-29 15:33:05
+lastsearch = 2024-07-29 17:38:35
 
 [shopee.vn]
-match = -90.5%%
-title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm trải giường
+match = -100.0%%
+title = Thảm trải sàn cỡ lớn trang trí phòng khách giường ngủ ...
+url = https://shopee.vn/Thảm-trải-sàn-cỡ-lớn-trang-trí-phòng-khách-giường-ngủ-hình-Chữ-nhật-200x85cm-mã-27023-i.18636247.14233410138
 
 [khosibaclieu.com]
 match = -9.5%%
