CI images update

--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-29 15:34:18
+lastsearch = 2024-07-29 18:01:24
 
 [demxanh.com]
-match = -17.6%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -94.1%%
+title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
+url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html?srsltid=AfmBOorJc--QtZ_YwDnmvzIRSNCzaHhFSlFieHL1ERBuaYAy-NfuLjqF
 
 [chieutrelanlan.com]
-match = -94.1%%
-title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
+match = -58.8%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
 url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
-match = -117.6%%
-title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
+match = 47.1%%
+title = chiếu trúc hạt nâu đen
+url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [www.diepxuan.com]
 match = -64.7%%
