--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-29 17:16:21
+lastsearch = 2024-07-29 17:49:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -249,7 +249,7 @@ url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-posta
 [agasound.vn]
 match = 6.7%%
 title = D2.15 - AGASOUND
-url = https://agasound.vn/d215?p=5
+url = https://agasound.vn/d215
 
 [nhiepanhdoisong.vn]
 match = -246.7%%
