--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-29 10:28:19
+lastsearch = 2024-07-29 17:58:36
 
 [www.chieulongdinh.com.vn]
 match = -187.5%%
@@ -214,7 +214,7 @@ url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-la
 [www.lazada.vn]
 match = -168.8%%
 title = [HÀNG DÀY ĐẸP] Chiếu lác nhựa siêu bền chắc, dễ giặt ...
-url = https://www.lazada.vn/products/hang-day-dep-chieu-lac-nhua-sieu-ben-chac-de-giat-gap-gon-chieu-nhua-day-kich-thuoc-1m6x2m-hang-viet-nam-cao-cap_hcm-nemtot-bedding-i1775759368.html?srsltid=AfmBOooFu3S2wMVF3Co_lodhcgwHB12P4CVHMaKE9Vk91f3c0Wba7nEV
+url = https://www.lazada.vn/products/hang-day-dep-chieu-lac-nhua-sieu-ben-chac-de-giat-gap-gon-chieu-nhua-day-kich-thuoc-1m6x2m-hang-viet-nam-cao-cap_hcm-nemtot-bedding-i1775759368.html
 
 [vtcnews.vn]
 match = -193.8%%
