--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -28.6%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012
-url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
+match = -138.1%%
+title = Lịch sử giá Com bô 5 món bộ chăn ga gối satin cao cấp ...
+url = https://muathongminh.vn/com-bo-5-mon-bo-chan-ga-goi-satin-cao-cap-ga-phu-1m8x2m-p.1__7045667082__160662133
 
 [beecost.vn]
 match = -61.9%%
