--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-29 16:30:12
+lastsearch = 2024-07-29 17:50:14
 
 [www.tiktok.com]
 match = -35.3%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnhcd0iT&sig=ACfU3U3f2eK2QXDolgqKuhEtmhtP6p-VBw&hl=en&sa=X&ved=2ahUKEwjI79Xl8cqHAxUJHzQIHb4nGFUQ6AF6BAgcEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnhh4-eU&sig=ACfU3U00dK9Cw0lrJgjo9Y90wqIwcB0fOg&hl=en&sa=X&ved=2ahUKEwjA8vCBisyHAxXgAzQIHUJzIsgQ6AF6BAhEEAM
 
 [tax.vermont.gov]
 match = -29.4%%
