--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-29 07:59:26
+lastsearch = 2024-07-29 17:53:43
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOopcLmsUh9MkWQBpjCmlaQKVWRWqhCRmWsfgb7W7E60YQ3WRqIoa
 
 [shopee.vn]
 match = -33.3%%
@@ -124,7 +124,7 @@ url = https://giuongxep.com/
 [www.lazada.vn]
 match = -23.8%%
 title = Thảm trải giường nỉ nhung hàng đẹp loại 1
-url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html
+url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html?srsltid=AfmBOopyMi8kB5NoXbpOH_3B1e9kAVEDYyD_w-4Mm9t3eaQ2CXxUYx-5
 
 [bvhungvuong.vn]
 match = -85.7%%
