--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-29 16:00:53
+lastsearch = 2024-07-29 17:51:40
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -50.0%%
+title = Tui Allen - Ticketmaster
+url = https://www.linkedin.com/in/tuiallen
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -192,14 +192,14 @@ title = UFC Fight Night: Tuivasa vs Tybura
 url = https://www.ufc.com/event/ufc-fight-night-march-16-2024
 
 [www.thenaturaladventure.com]
-match = -283.3%%
-title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
+match = -325.0%%
+title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
 
 [www.youtube.com]
-match = -141.7%%
-title = TUI 787 incident - 16th February 2023
-url = https://www.youtube.com/watch?v=VnQjWg2azZ0
+match = -308.3%%
+title = Boeing 787 Dreamliner TUI (G -TUIH) Heavies Back to ALC!
+url = https://www.youtube.com/watch?v=rKX5XlLTbUo
 
 [www.americanairlines.co.uk]
 match = -350.0%%
