--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-29 16:45:56
+lastsearch = 2024-07-29 17:45:25
 
 [www.tui.co.uk]
-match = -160.0%%
-title = Marella Cruises | Cruise Holidays 2024 / 2025
-url = https://www.tui.co.uk/cruise/
+match = -86.7%%
+title = Top things to do in Singapore | Discover
+url = https://www.tui.co.uk/discover/top-things-to-do-singapore
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -240,4 +240,9 @@ url = https://embraer.com/global/en/news?slug=1207114-tui-selects-embraer-e195-e
 match = -140.0%%
 title = Bags That Get It - Work Bags & Travel Bags
 url = https://www.dagnedover.com/
+
+[www.intercruises.com]
+match = -180.0%%
+title = Home - Intercruises - Shoreside & Port Services ™
+url = https://www.intercruises.com/
 
