--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-29 16:34:25
+lastsearch = 2024-07-29 18:24:34
 
 [demxanh.com]
 match = 14.8%%
@@ -12,14 +12,14 @@ title = Sử dụng chiếu điều hòa có tốt hay không?
 url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
-match = -33.3%%
-title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
-url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
+match = 18.5%%
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
+url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
 match = 29.6%%
