--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-29 15:52:39
+lastsearch = 2024-07-29 18:11:18
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -180.0%%
+title = MOVSA - Melbourne Overseas Vietnamese Student ...
+url = https://www.facebook.com/movsa.vn/posts/-𝐃𝐄𝐏𝐀𝐑𝐓𝐔𝐑𝐄-𝐁𝐑𝐈𝐄𝐅𝐈𝐍𝐆-𝐊𝐈𝐂𝐊-𝐒𝐓𝐀𝐑𝐓-️𝐌𝐎𝐕𝐒𝐀-𝐱-𝐒𝐄𝐓-𝐄𝐃𝐔𝐂𝐀𝐓𝐈𝐎𝐍___________________________/754660916690225/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -72,8 +72,8 @@ title = D2 - Phát Triển Người Lãnh Đạo - Mục Sư Brian Houston
 url = https://quangharvest.com/isom-khoa-cap-4/d2-phat-trien-nguoi-lanh-dao-developing-leaders
 
 [www.vietnamairport.vn]
-match = -213.3%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
+match = -240.0%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [www.axel-gl.com]
