--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 16:44:36
+lastsearch = 2024-07-29 18:17:12
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -62.5%%
-title = 'Độc chiêu' của gã giám đốc mê cờ bạc
-url = https://baomoi.com/doc-chieu-cua-ga-giam-doc-me-co-bac-c49759121.epi
+match = -168.8%%
+title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
+url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -231.2%%
-title = CVCUL NCKT 1 và 2 Sử kí, E-xơ-ra, Nê-hê-mi và Ê-xê-tê - Kì 2
-url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash3_j4VNX&sig=ACfU3U2ApNJ2e6AiaYg2O076jOHAsAqQhQ&hl=en&sa=X&ved=2ahUKEwjQ9f-dzcuHAxUwElkFHZL0KycQ6AF6BAgYEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacAR3nv9&sig=ACfU3U0IPAZllptJ2rqOhnAOlo5KInKV7A&hl=en&sa=X&ved=2ahUKEwiE58aFkMyHAxXvFVkFHVaTOp8Q6AF6BAglEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
