--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-29 13:46:50
+lastsearch = 2024-07-29 18:11:39
 
 [www.everonvn.vn]
-match = -61.5%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = 69.2%%
+title = Đệm lò xo Everon Pocket Premium
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 
 [www.diepxuan.com]
 match = 61.5%%
 title = Điệp Xuân Nệm lò xo Everon Pocket 18
-url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html?srsltid=AfmBOoqkNErL1awZ-1frz-4VqEpWf30yN_pgoZWUp0aOHRkw84ccGrlp
+url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 
 [everon.online]
 match = -26.9%%
@@ -64,7 +64,7 @@ url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 [everon.com.vn]
 match = -19.2%%
 title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOooHCGgsogRAATEBlBtSQFxwBcGp9nVQsX3cIF3ua9NM3lOlXHz_
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
 match = -19.2%%
