--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-29 16:41:34
+lastsearch = 2024-07-29 18:15:47
 
 [www.lazada.vn]
 match = -111.1%%
@@ -22,9 +22,9 @@ title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
 url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
-match = -55.6%%
-title = Bảng giá nệm cao su Kim Cương mới 2024
-url = https://thegioinem.com/bang-gia-nem-cao-su-kim-cuong.html
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
 match = -88.9%%
