--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-29 17:34:06
+lastsearch = 2024-07-29 18:32:36
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -6.5%%
+title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
+url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 58.1%%
+title = Bộ chăn ga gối Hanvico LIVING - LV18
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 53.8%%
-title = Bộ chăn ga gối SH_UC24 101
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-101
+match = 50.0%%
+title = Bộ chăn ga gối SH_UT24 203
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -41.9%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOopgiriEreNRasnnfF4zNHXBMLbao0kyad2DehsaDwZ8aP4-7MIq
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [lizd.vn]
 match = 0.0%%
