--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-29 18:14:06
 [demxanh.com]
 match = -135.3%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqUkaH0RmLz0t7LNJmb2A_NN9RrtahM5UPPiLDjr1dnIzad3bca
 
 [dem24h.vn]
 match = -29.4%%
