--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-29 15:38:04
+lastsearch = 2024-07-29 18:38:30
 
 [demtot.com]
-match = 45.0%%
-title = Đệm lò xo túi Acness
-url = https://demtot.com/dem-lo-xo-tui-acnes/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-
 [demxanh.com]
 match = -52.4%%
 title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html?srsltid=AfmBOooVMDQOtGnwNNwubYMtrikt1Ebi1D7ThflpcN1TvWy2fOHTXa8B
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [maybedding.vn]
 match = 38.9%%
