--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-29 15:59:13
+lastsearch = 2024-07-29 18:41:15
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-88eUiefc&sig=ACfU3U1afimKB3WPluk3eTeHHMr4vNcRPw&hl=en&sa=X&ved=2ahUKEwiMsP2Z8cuHAxVJKkQIHdGlBn0Q6AF6BAgmEAM
 
 [30rates.com]
-match = -104.3%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -91.3%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
