--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-29 15:17:55
+lastsearch = 2024-07-29 18:39:52
 
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOopAKaJysmXHnS9ergLv107VIodh9BaiLN-seOy-8hKQ5Bm10d2Y
 
 [tiki.vn]
 match = -117.6%%
@@ -17,9 +17,9 @@ title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 33
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-33-p38118982.html
 
 [www.lazada.vn]
-match = -152.9%%
-title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+match = -158.8%%
+title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
+url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html?srsltid=AfmBOopJ2yyG4u3HykHea-SakZncDC5ci6yRwmlF6DDFIt9F3Tkbwm1f
 
 [thegioidemviet.vn]
 match = -152.9%%
