--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -58,8 +58,8 @@ url = https://profiles.ucsf.edu/marina.sirota
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [profiles.ucla.edu]
 match = -6.7%%
