CI images update

--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-29 14:17:28
+lastsearch = 2024-07-29 20:36:50
 
 [www.diepxuan.com]
 match = 40.9%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOorNXCpv7FHKTbJta_83vzdyzId4c6rXuVLQYXquUKLr_dg_hMSA
 
 [tiki.vn]
 match = -36.4%%
@@ -19,7 +19,7 @@ url = https://tiki.vn/search?q=thảm trải giường
 [www.lazada.vn]
 match = -86.4%%
 title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/?srsltid=AfmBOor_xU-APZCy64xqf_4Ns2_LGuAvn8bHgEzAHu9tI9wkmJ3xMjNv
 
 [flexhouse.vn]
 match = -104.5%%
@@ -92,8 +92,8 @@ title = Giường trẻ em EB055
 url = https://anawood.vn/product/giuong-tre-em-eb055/
 
 [mozano.vn]
-match = -72.7%%
-title = Kích thước các loại đệm bán chạy nhất hiện nay
+match = -109.1%%
+title = Tham khảo: Kích thước các loại đệm bán chạy nhất hiện nay
 url = https://mozano.vn/kich-thuoc-cac-loai-dem-864.htm
 
 [nemkimdinh.com]
