--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-29 17:49:12
+lastsearch = 2024-07-29 20:26:31
 
 [everon.online]
 match = -7.4%%
@@ -37,8 +37,8 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
+match = 15.8%%
+title = Bộ Everon Epm-21069
 url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
 
 [sieuthidemhanquoc.com.vn]
