--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-29 13:57:22
+lastsearch = 2024-07-29 20:33:42
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -152,9 +152,9 @@ title = Hành trình thai giáo 280 ngày by Nguyễn Huy Hoàng
 url = https://issuu.com/huyhoangytn/docs/hs2a_hanh-trinh-thai-giao-280-ngay
 
 [m.facebook.com]
-match = 14.3%%
-title = GIÚP VIỆC GIA ĐÌNH TẠI ĐÀI LOAN
-url = https://m.facebook.com/groups/1784118962092840/
+match = -39.3%%
+title = Chiều nay em co 30kg ghẹ xanh to chăc mẩy ủ đá tươi ngon
+url = https://m.facebook.com/groups/2393083487434360/posts/7839014392841215/
 
 [dabanhmat.com]
 match = -28.6%%
