--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-29 20:01:05
+lastsearch = 2024-07-29 20:31:23
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOor6aoSHO8pr0z2Ddp54zHe2yacIVl0YRQGHJJvuiOPP3vDip1_r
 
 [shopee.vn]
 match = 70.0%%
