--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-29 18:31:30
+lastsearch = 2024-07-29 20:23:46
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxWC53HW&sig=ACfU3U2jn_kXm9KSPYuoX46-331DJvuxww&hl=en&sa=X&ved=2ahUKEwjz-eiek8yHAxVd48kDHe34CckQ6AF6BAglEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxWCc1A0&sig=ACfU3U3UEauvwPuqyP3serYMnGrs5AMRqw&hl=en&sa=X&ved=2ahUKEwiymeeqrMyHAxVbEFkFHbqwC_4Q6AF6BAgZEAM
 
 [ottawabraves.com]
 match = -292.3%%
