--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-29 15:27:13
+lastsearch = 2024-07-29 20:53:28
 
 [everon.online]
 match = -32.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
-match = -8.0%%
-title = Chăn bốn mùa Everon Es-1802 giảm giá 40%%
-url = https://everonvn.com.vn/everon/2393/chan-bon-mua-es-1802
+match = 28.0%%
+title = Báo giá chăn 4 mùa Everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -32,9 +32,9 @@ title = Bộ Ga Chun Chần Bốn Mùa Freesia
 url = https://tongdailyeveron.com.vn/products/nhan-ban-tu-bo-ga-chun-chan-bon-mua-vintage-rose
 
 [everonminhkhai.com]
-match = -6.7%%
-title = Bộ chăn bốn mùa
-url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan-bon-mua/
+match = 47.8%%
+title = Bộ ga chun chần bốn mùa
+url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan-bon-mua/
 
 [vhds.baothanhhoa.vn]
 match = -16.0
