--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-29 18:32:36
+lastsearch = 2024-07-29 20:44:11
 
 [chanrathanhthuy.com]
-match = -6.5%%
-title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
-url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
+match = 9.7%%
+title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
 match = 58.1%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Hanvico LIVING - LV18
 url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 203
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
+match = 53.8%%
+title = Bộ chăn ga gối SH_UC24 101
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-101
 
 [changagoidemsonghong.com]
 match = -29.0%%
