--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-29 17:50:37
+lastsearch = 2024-07-29 20:51:06
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Đèn chiếu điểm HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -160.0%%
+title = Công Ty Sản Xuất Đèn LED Chiếu Sáng HT Light Level
+url = https://www.htlightlevel.vn/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -94,7 +94,7 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOorqpkIRiIAgkBE0XLch1dNIZpqRtZkFcEBrwBWR-7xwbX6kFC7r
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [huongtruc.com]
 match = -213.3%%
