--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-29 20:32:03
+lastsearch = 2024-07-29 20:46:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -232,8 +232,8 @@ title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
 [www.instagram.com]
-match = -273.3%%
-title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ sữa và ...
+match = -226.7%%
+title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ ...
 url = https://www.instagram.com/p/CFD27fHldDQ/
 
 [luatvietnam.vn]
@@ -382,8 +382,8 @@ title = Hướng dẫn cách cúng rước ông bà 30 Tết chuẩn, chi tiết
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-cung-ruoc-ong-ba-30-tet-chuan-chi-tiet
 
 [vietnamese.alibaba.com]
-match = -226.7%%
-title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy Chỉnh
+match = -213.3%%
+title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy ...
 url = https://vietnamese.alibaba.com/product-detail/Golf-Club-Set-for-Lady-with-1600364285763.html
 
 [www.highlandscoffee.com.vn]
