--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-29 20:39:37
+lastsearch = 2024-07-29 20:49:04
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -314,7 +314,7 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOoo0nHFPThvfkNEYGDnwxeVSugDG06B51l0ZFO88etaHFeaDYlhi
 
 [yato.vn]
 match = -175.0%%
