--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-29 16:56:07
+lastsearch = 2024-07-29 20:57:36
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 29.0%%
-title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
+match = -6.5%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = 16.1%%
-title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc
+match = -3.2%%
+title = chiếu trúc điều hòa giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc điều hòa
 
 [tiki.vn]
 match = -6.5%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 3.2%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117250267.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721952000324_undefined_-1_cateLvl2_0_89_23_-1
+match = 61.3%%
+title = Chiếu trúc Quế Lâm loại 1m*1m9 - ctql001
+url = https://www.sendo.vn/chieu-truc-que-lam-loai-1m-1m9-31977538.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1711756800322_undefined_-1_cateLvl2_0_8_23_-1
 
 [www.lazada.vn]
 match = 16.1%%
@@ -47,9 +47,9 @@ title = Chiếu trúc quế lâm loại 1 16 20
 url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 
 [www.facebook.com]
-match = 66.7%%
-title = Chiếu Trúc Quế Lâm | Hai Phong
-url = https://www.facebook.com/ChieuTrucQueLam/
+match = -31.6%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [www.dienmayxanh.com]
 match = -29.0%%
