--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-29 20:04:06
+lastsearch = 2024-07-29 20:57:57
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 06
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-06.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
 
 [www.diepxuan.com]
-match = 28.6%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
+match = 35.7%%
+title = Ga chun EPCARLESS 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
