--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-07-29 20:23:27
+lastsearch = 2024-07-29 20:57:17
 
 [nemgiakho.com]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-cao-su-lien-a-classic-new-160x200x10cm.html
 [www.liena.com.vn]
 match = -25.9%%
 title = nệm cao su - thiên nhiên là gì? top những sản phẩm
-url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi
+url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi?srsltid=AfmBOoouo7gCdjXZyFnES23mhJmz8uCiXZEI0ceVbMq3uKvHVUsGO26e
 
 [fefurniture.com.vn]
 match = 7.4%%
@@ -24,7 +24,7 @@ url = https://fefurniture.com.vn/products/nem-cao-su-thien-nhien-lien-a-classic
 [demxanh.com]
 match = -11.1%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoqcpsax6qbZ8Ks5EY1iqjHxZgDI7heF7s40P8TC-zDUkt-dYOl9
 
 [www.thegioinemvip.com]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinemvip.com/nem-cao-su-lien-a-classic-new-160x200x10cm-g
 [www.lazada.vn]
 match = -7.4%%
 title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
-url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
+url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html?srsltid=AfmBOorpApnBKZbH4bDr8RcfKYdYZAOhjzPc-5i9-UHmeNQ50YvByULP
 
 [tiki.vn]
 match = 0.0%%
