--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 20:34:27
+lastsearch = 2024-07-29 21:46:09
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -57,9 +57,9 @@ title = Scholarly articles for chieu lac soc 16
 url = https://scholar.google.com/scholar?q=chieu+lac+soc+16&hl=en&as_sdt=0&as_vis=1&oi=scholart
 
 [moveek.com]
-match = -168.8%%
-title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/lotte-kosmo-tay-ho/
+match = -175.0%%
+title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-kien-giang/
 
 [baolongan.vn]
 match = -31.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -106.2%%
-title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
-url = https://www.youtube.com/watch?v=D5B7MtNy_kM
+match = -131.2%%
+title = Chiêu độc kích thích bưởi ra hoa, đậu quả I VTC16
+url = https://www.youtube.com/watch?v=MXwfPHbrM00
 
 [books.google.com]
 match = -218.8%%
@@ -132,9 +132,9 @@ title = 'Tiểu Maldini' sắp gia nhập Arsenal là ai?
 url = https://vtcnews.vn/tieu-maldini-sap-gia-nhap-arsenal-la-ai-ar884525.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 29/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2907-tam-ly-lac-quan-dan-quay-tro-lai-585-1212641.htm
+match = -218.8%%
+title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
 
 [www.dcine.vn]
 match = 20.0%%
@@ -630,4 +630,14 @@ url = https://nso.com.vn/en/n/list/industrial-parks-19
 match = -43.8%%
 title = HCMC shopping - Vietnam Forum
 url = https://www.tripadvisor.in/ShowTopic-g293921-i8432-k1323310-HCMC_shopping-Vietnam.html
+
+[pandora.norbreeze.vn]
+match = -40.0%%
+title = Size Guide
+url = https://pandora.norbreeze.vn/pages/size-guide-1
+
+[www.momo.vn]
+match = -43.8%%
+title = Lịch chiếu phim CGV Crescent Mall
+url = https://www.momo.vn/cinema/rap/cgv/cgv-crescent-mall-58
 
