--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-29 21:16:06
+lastsearch = 2024-07-29 21:48:34
 
 [demxanh.com]
 match = -84.2%%
@@ -305,4 +305,49 @@ url = https://vetaffairs.sd.gov/memorials/Vietnam/incountry.aspx
 match = -5.3%%
 title = Tấm vải trang trí khách sạn - Kho đệm
 url = https://khodem.vn/tam-vai-trang-tri-khach-san/
+
+[www.uc.edu]
+match = -10.5%%
+title = Disclosed Manufacturers
+url = https://www.uc.edu/content/dam/uc/licensing/Docs/UC Licensees-Factory Disclosures-August 2013.pdf
+
+[www.linkedin.com]
+match = -73.7%%
+title = Phong Chung - Medical Assistant intership
+url = https://www.linkedin.com/in/phong-chung-a2a450293
+
+[www.courts.ca.gov]
+match = -200.0%%
+title = Sheet1
+url = https://www.courts.ca.gov/documents/lr-20150201-Trial-Court-Payment-Report.xlsx
+
+[bestinnursing.org]
+match = 0.0%%
+title = Nurses to Watch
+url = https://bestinnursing.org/nurses-to-watch-2/
+
+[www.doi.gov]
+match = -31.6%%
+title = DOI FY 2024 Forecast_10172023
+url = https://www.doi.gov/sites/doi.gov/files/consolidated-doi-forecast-all-bureaus-11132023.xlsx
+
+[www.dir.ca.gov]
+match = -84.2%%
+title = STATE OF CALIFORNIA WORKERS' COMPENSATION ...
+url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Other-Consolidations/Mesa-Pharmacy.pdf
+
+[faolex.fao.org]
+match = -200.0%%
+title = OFF[C!AL GAi'.E'ffE Pur.\'lio'1t: lo the LandLc1w antl'the law ...
+url = https://faolex.fao.org/docs/pdf/vie35255.pdf
+
+[www.goodall.com.au]
+match = -31.6%%
+title = BEECH 18 PRODUCTION LIST PART 3
+url = https://www.goodall.com.au/beech18-production/beech18-part-3.pdf
+
+[canthinhphat.com]
+match = 0.0%%
+title = cdY cHUNG NHAN HtEu cnuAru
+url = https://canthinhphat.com/data/news/2614/tps-ind226-30kg.pdf
 
