--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-29 17:49:33
+lastsearch = 2024-07-29 21:45:26
 
 [www.instagram.com]
 match = -246.2%%
@@ -12,9 +12,9 @@ title = Yuki Chan (@yukichan_la) • Instagram photos and videos
 url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = -192.3%%
-title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
-url = https://www.linkedin.com/in/hoi-ki-chan-519219147
+match = 23.1%%
+title = Hoi Chan Studio
+url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 7.7%%
-title = Yuki-Chan Cosplay
-url = https://www.facebook.com/YukiChansp/
+match = 33.3%%
+title = Yuk Hoi Chan
+url = https://www.facebook.com/hoihihoi/
 
 [happypaca.tumblr.com]
 match = -276.9%%
