--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-29 19:25:42
+lastsearch = 2024-07-29 21:51:03
 
 [shopee.vn]
-match = -28.0%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -8.0%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [tiki.vn]
 match = 16.0%%
@@ -92,9 +92,9 @@ title = Ngồi coi video về chống lừa đảo... - Xin chào, tôi ở Đà
 url = https://m.facebook.com/toiodailoan/posts/5438087432905953/?locale=hi_IN
 
 [www.youtube.com]
-match = -88.0%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 15 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=29tk0OUVWts
+match = -108.0%%
+title = 20240415 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=S1nS1M-7VOc
 
 [www.qdnd.vn]
 match = -72.0%%
