--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOordLHUzPvVaL7Zgu7dDkkq6U6GRFdVszRCEA2KlamVytHHwk4Ie
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
 
 [www.nhathuocankhang.com]
 match = -220.0%%
