--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-29 20:33:23
+lastsearch = 2024-07-29 22:01:15
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -175.0%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP. ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2400455940334871/
+match = -206.2%%
+title = Miss... - Miss Grand Vietnam - Hoa Hậu Hòa Bình Việt Nam
+url = https://m.facebook.com/100064207387690/photos/914547064028865/
 
 [baomoi.com]
 match = -193.8%%
