--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-29 17:29:25
+lastsearch = 2024-07-29 21:54:33
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -152.9%%
-title = What is the age limit for residents in homeowners ...
-url = https://www.quora.com/What-is-the-age-limit-for-residents-in-homeowners-associations-HOAs-Can-somebody-buy-into-an-HOA-after-reaching-retirement-age-but-before-getting-Social-Security-benefits
+match = -176.5%%
+title = What can I do when a Homeowner's Association pops up in ...
+url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
 
 [lauragoodsonart.com]
 match = 47.1%%
