--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-29 18:34:17
+lastsearch = 2024-07-29 21:46:50
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCq8yvsn&sig=ACfU3U03xEpV7pTfo6_Yk4bDyXBZ6jcDWg&hl=en&sa=X&ved=2ahUKEwiP2ajuk8yHAxUO4ckDHZKYH3YQ6AF6BAgbEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCq9Arog&sig=ACfU3U2_E4o81uuLsVCOkkgKSYT1irblYA&hl=en&sa=X&ved=2ahUKEwiJxYLzvsyHAxWd48kDHcicCz4Q6AF6BAg2EAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -430,4 +430,9 @@ url = http://www.sproe.com/t/tu-es-partout-english.html
 match = 0.0%%
 title = 
 url = https://www.edsullivan.com/artists/edith-piaf/
+
+[www.jstor.org]
+match = -76.2%%
+title = Pindar, "Nem." 5 - Nereids with Golden Distaffs
+url = https://www.jstor.org/stable/20538961
 
