--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-29 18:44:33
+lastsearch = 2024-07-29 22:23:20
 
 [xoptraisan.info]
 match = -147.4%%
@@ -12,9 +12,9 @@ title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp 
 url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamaulac.com.vn]
-match = -78.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -31.6%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
 match = 26.3%%
@@ -37,9 +37,9 @@ title = Thảm xốp 60x60cm
 url = https://thamtretho.com/tham-xop-60x60cm
 
 [vatlieulotsan.com]
-match = -52.6%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -73.7%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [tiki.vn]
 match = -94.7%%
