--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-07-29 21:39:30
+lastsearch = 2024-07-29 22:34:38
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOooYMCT2LxnuOdv1HmaSSRs1yEdzoPHvcVSPahuTfgp-MOSp2g0C
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = -25.9%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOorY371z7uz0pJnA8lLA3vpJO9EJc7GD6wL1YE1BVJtWDmPYWRL0
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
 
 [lybalansieucute.com]
 match = 37.0%%
@@ -49,7 +49,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOorxH5OW88TqOCfItWIXrRxup5UWI0KvsJGk2sRMI2F9Qah66nv5
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [mandep.vn]
 match = 37.0%%
