--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-29 21:15:06
+lastsearch = 2024-07-29 22:32:11
 
 [www.bible.com]
 match = -64.7%%
@@ -47,14 +47,14 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
-match = -142.9%%
-title = hmmm...
-url = https://www.youtube.com/watch?v=89EqML75i9U
+match = -111.8%%
+title = KHAWNBAWL FAPA HUAISEN LEH HMEITHAI FANU ...
+url = https://www.youtube.com/watch?v=7GusulFHxY4
 
 [www.biblestudytools.com]
 match = -129.4%%
