--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-29 21:46:50
+lastsearch = 2024-07-29 22:37:23
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCq9Arog&sig=ACfU3U2_E4o81uuLsVCOkkgKSYT1irblYA&hl=en&sa=X&ved=2ahUKEwiJxYLzvsyHAxWd48kDHcicCz4Q6AF6BAg2EAM
+match = -142.9%%
+title = A critical pronouncing dictionary. With a suppl., by E. Smith
+url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvleaLA6T&sig=ACfU3U1YrX0kNUrVLElc-qWa8Dax8u4Wqw&hl=en&sa=X&ved=2ahUKEwjpl8qZysyHAxWbmokEHbKwGFcQ6AF6BAhJEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -76.2%%
-title = Nem Dubrovnik 2024 confirms a record of partecipants
-url = https://www.formatbiz.it/dettNews.aspx?id=11256
+match = -95.2%%
+title = NEM Dubrovnik 2023, Day 2: record number of decision ...
+url = https://www.formatbiz.it/dettNews.aspx?id=10170
 
 [yro.slashdot.org]
 match = -114.3%%
