--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-29 11:46:03
+lastsearch = 2024-07-29 22:36:43
 
 [tuananh.vn]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Đệm bông Adaptive Fiber 3M
 url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOorywAJYhLLgqtjrLEyAUa32BYqAL2607O-arHdwNC0YEvjve44q
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/tuananh.vn/videos/đệm-tuấn-anh-hướng-dẫ
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOoqrx2dFBZMin44h9ja5SkPhGZFNDFHRC8CoxQhPjsw_lL4qGqZk
 
 [m.facebook.com]
 match = -76.0%%
