--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-29 20:34:06
+lastsearch = 2024-07-29 22:50:18
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -632,9 +632,9 @@ title = SNAP Eligibility
 url = https://www.fns.usda.gov/snap/recipient/eligibility
 
 [www.facebook.com]
-match = 0.0%%
-title = Barack Obama
-url = https://www.facebook.com/barackobama/
+match = -22.2%%
+title = Lady Gaga
+url = https://www.facebook.com/ladygaga/
 
 [ohio.gov]
 match = -280.0%%
@@ -820,4 +820,9 @@ url = https://www.techcu.com/
 match = -246.7%%
 title = University of Oregon Athletics - Official Athletics Website
 url = https://goducks.com/
+
+[www.ucdavis.edu]
+match = -100.0%%
+title = UC Davis | California's College Town
+url = https://www.ucdavis.edu/
 
