--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-29 18:35:40
+lastsearch = 2024-07-29 22:45:37
 
 [shopee.vn]
 match = -171.4%%
@@ -12,19 +12,19 @@ title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
 url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
 
 [mungthienmetta.com]
-match = -185.7%%
-title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
-url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
+match = -200.0%%
+title = 1M2 x 1M9 | Mùng Ngủ Tự Bung Dành Cho 2 Người (ĐỎ ĐÔ)
+url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/1-2m-x-1m9-mung-ngu-tu-bung-danh-cho-2-nguoi-do-do-bh-18-thang-chinh-hang.html
 
 [tiki.vn]
 match = -221.4%%
 title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
+url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465914
 
 [manthutrang.com]
-match = -200.0%%
-title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
-url = https://manthutrang.com/
+match = -228.6%%
+title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
+url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [www.mantubung.com]
 match = -228.6%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/
 [www.lazada.vn]
 match = -164.3%%
 title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html?srsltid=AfmBOoqh5Pah_-V6BJt343MPoBwLqSr4n7phnfiAWgDxy5SHCGNMJPVI
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
 
 [www.mungbaobao.com]
 match = -214.3%%
