--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-29 10:33:48
+lastsearch = 2024-07-29 22:45:58
 
 [everon.com.vn]
 match = 14.8%%
@@ -39,7 +39,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 [www.everonvni.vn]
 match = 16.7%%
 title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
-url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/?srsltid=AfmBOopJTpzm4XZo0w6pCBnraD_JYrmeYkjjAsCM90OIsTgaGhN2cKaI
+url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
 
 [everonhanquoc.vn]
 match = 19.4%%
