--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-29 20:27:12
+lastsearch = 2024-07-29 23:01:57
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -22,9 +22,9 @@ title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
-url = https://changagoidemsonghong.com/chan-ga-goi-micro-dn1805
+match = -9.5%%
+title = Bộ chăn ga gối WaltDisney mã BY20002
+url = https://changagoidemsonghong.com/chan-ga-goi-by20002
 
 [demsonghonghanoi.com]
 match = -14.3%%
