--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-29 21:41:37
+lastsearch = 2024-07-29 23:01:35
 
 [chieutruc.info]
 match = -73.9%%
@@ -18,8 +18,8 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [shopee.vn]
 match = -78.3%%
@@ -57,9 +57,9 @@ title = Chiếu Trúc Cao Bằng
 url = https://chieu.com.vn/chieu-truc/chieu-truc-cao-bang
 
 [www.youtube.com]
-match = -126.1%%
-title = Thời sự 18h tối 10/6. Chủ tịch nước Tô Lâm làm việc với Tỉnh ...
-url = https://www.youtube.com/watch?v=g5gSMotxJVA
+match = -100.0%%
+title = Đồng Nai: Xe bán tải bị tàu hỏa húc văng, khiến 5 người ...
+url = https://www.youtube.com/watch?v=-ct3l7liT7U
 
 [tiki.vn]
 match = -87.0%%
