--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-29 22:01:15
+lastsearch = 2024-07-29 22:55:53
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -175.0%%
-title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
-url = https://www.youtube.com/watch?v=_iGnRB4o7ng
+match = -193.8%%
+title = #58.Hướng Dẫn Cách Lắp Bảng Lề Xoay | Cửa Cổng Cho Ai ...
+url = https://www.youtube.com/watch?v=JXckUMr9AoA
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -297,8 +297,8 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.lazada.vn]
-match = -6.2%%
-title = Chiếu Lác May Giá Tốt T06/2024
+match = -125.0%%
+title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [suckhoedoisong.vn]
