--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-29 21:22:22
+lastsearch = 2024-07-29 22:54:52
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -49,12 +49,12 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html?srsltid=AfmBOopUj3Bn-dMg75wHbxegZJ96hB45MJNuGCY8djXvrgjvkNB9jLJC
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOorkb1KAbCkHmStIbebtFzY1LF90B3vVES-1kYC-HxugSXMYKWdY
 
 [thuanloitrading.com]
 match = 10.0%%
