--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-29 21:53:07
+lastsearch = 2024-07-29 22:55:12
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -610,4 +610,9 @@ url = https://www.georgiaencyclopedia.org/articles/arts-culture/historically-bla
 match = -69.2%%
 title = The Dream Act: An Overview
 url = https://www.americanimmigrationcouncil.org/research/dream-act-overview
+
+[www.jimnnicks.com]
+match = -84.6%%
+title = Jim 'N Nick's BBQ Restaurant
+url = https://www.jimnnicks.com/
 
