--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-29 19:58:03
+lastsearch = 2024-07-29 22:51:20
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,19 +17,19 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -50.0%%
-title = NEM Furniture JSC (@nemfurniturejsc)
-url = https://www.instagram.com/nemfurniturejsc/?hl=en
+match = -116.7%%
+title = LU EATING | MỘT GÓC NEM CHUA RÁN XINH XẺO GIỮA ...
+url = https://www.instagram.com/p/CltHti5L66x/
 
 [www.facebook.com]
-match = 22.2%%
-title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
-url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
+match = -105.6%%
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -127.8%%
-title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
-url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
+match = -188.9%%
+title = bf nem nướng nha trang 39ka mở cả trưa và tối cập bến team ...
+url = https://www.tiktok.com/@bachuareview/video/7236713258948840712?lang=en
 
 [www.youtube.com]
 match = -144.4%%
