--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-29 22:38:03
+lastsearch = 2024-07-29 22:44:34
 
 [everonvn.com.vn]
 match = 0.0%%
 title = Vỏ Gối Everon Giảm Giá Es1366
-url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366?srsltid=AfmBOorrh9O9PjGaS72nKcemOyNI2H-Fp53AVvbdssy-xL7N5l1ojeef
+url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOorXXxeROa3OsQFrZlWCrZ5LnsVaH9j0Yc9YxwYTwMurLzKBQwyf
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,12 +34,12 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 5.6%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOooi8v4HTcZ9CXkHqAGYEzTDOUJJS7S_2q3bA6O0LYNmA67xGaZ5
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
-match = -105.6%%
-title = Vỏ gối ESB23022 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-esb23022-45x65.html
+match = -100.0%%
+title = Vỏ gối ES1808 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-es1808-45x65.html
 
 [shopee.vn]
 match = -127.8%%
