--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-29 23:48:57
+lastsearch = 2024-07-30 00:40:53
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -52,9 +52,9 @@ title = 27 Bộ Chăn Ga Gối Đệm Phòng Cưới Sang Xịn Mịn Với Giá
 url = https://cuahangchangagoidem.com/chan-ga-goi-dem-phong-cuoi/
 
 [goni.vn]
-match = 14.3%%
-title = Bộ chăn mền ga gối Goni tici màu xám
-url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-xam/
+match = 7.1%%
+title = Bộ chăn mền ga gối Goni tici màu cam xám
+url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-cam-xam/
 
 [ru9.vn]
 match = -25.0%%
