--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-29 23:01:14
+lastsearch = 2024-07-30 00:32:25
 
 [demxanh.com]
-match = 3.4%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel xanh nhạt
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
 match = 3.4%%
@@ -27,9 +27,9 @@ title = [RẺ NHẤT] Chiều điều hòa cao su non Latex mẫu mới siêu ..
 url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
 
 [changagoidemdep.vn]
-match = -10.3%%
-title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel hồng đất - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-hong-dat.html
 
 [khodem.vn]
 match = 55.2%%
