--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-29 17:35:27
+lastsearch = 2024-07-30 00:27:48
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -118.2%%
-title = Protein acylation: mechanisms, biological functions and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9797573/
+match = -113.6%%
+title = Molecular Biology of Lung Cancer: Clinical Implications
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3367865/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -645,4 +645,9 @@ url = https://parks.nv.gov/uploads/documents/Appendix_I._2021_Nevada_Outdoor_Rec
 match = -63.6%%
 title = GILPIN COUNTY AND ADJACENT PARTS OF CLEAR ...
 url = https://pubs.usgs.gov/pp/0094/report.pdf
+
+[research.sdsu.edu]
+match = 0.0%%
+title = SDSU Student Symposium 2024
+url = https://research.sdsu.edu/sdsu_student_symposium/2024_s3_program_final.pdf
 
