--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-29 15:33:15
+lastsearch = 2024-07-30 00:28:10
 
 [tuananh.vn]
 match = 22.2%%
@@ -12,9 +12,9 @@ title = Đệm Korea Gấm Plus
 url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -27,9 +27,9 @@ title = Bảng Giá đệm mút Korea Tuấn Anh - Mới 2023 [Giảm -50%%]
 url = https://thegioidemviet.vn/dem-mut-pe-korea-tuan-anh/
 
 [shopee.vn]
-match = -52.0%%
-title = Đệm Bông Ép Korea Bebop Tuấn Anh chính hãng, đủ size, ...
-url = https://shopee.vn/Đệm-Bông-Ép-Korea-Bebop-Tuấn-Anh-chính-hãng-đủ-size-thoáng-khí-cứng-vỏ-cotton-thấm-hút-tốt-i.22640428.22257479785
+match = -56.0%%
+title = Đệm lò xo túi kore Tuấn Anh _180x200x24cm_hành chính ...
+url = https://shopee.vn/Đệm-lò-xo-túi-kore-Tuấn-Anh-_180x200x24cm_hành-chính-hãng-i.40557700.6436980296
 
 [demviethome.vn]
 match = -4.0%%
