--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-29 20:43:03
+lastsearch = 2024-07-30 00:42:19
 
 [www.diepxuan.com]
-match = -131.2%%
-title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demxanh.com]
 match = -181.2%%
@@ -190,4 +190,9 @@ url = https://www.reddit.com/r/TheLastAirbender/comments/lrqa8p/avatar_studios_l
 match = -150.0%%
 title = "Golden Balance" Sticker for Sale by Diremagic
 url = https://www.redbubble.com/i/sticker/Golden-Balance-by-Diremagic/148275584.EJUG5
+
+[ayd643.com]
+match = -137.5%%
+title = malta travel forum - malta expats - ayd643.com
+url = https://ayd643.com/product/fyaptzxg-246/
 
