CI images update

--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-29 20:34:22
+lastsearch = 2024-07-30 00:45:57
 
 [erado.vn]
 match = 0.0%%
@@ -239,7 +239,7 @@ url = https://www.kymdan.com/danh-muc/giuong-sat-xep-di-dong
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 18 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html?srsltid=AfmBOorj9KJ8cIDtGUGdDZtpUh78XCwpltx8g0E0gmpFYvkeOGGd0K3J
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html
 
 [giuonggapvietnhat.vn]
 match = -50.0%%
