--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-29 23:42:10
+lastsearch = 2024-07-30 00:46:18
 
 [m.youtube.com]
 match = -144.4%%
@@ -27,9 +27,9 @@ title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
 url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -188.9%%
-title = bf nem nướng nha trang 39ka mở cả trưa và tối cập bến team ...
-url = https://www.tiktok.com/@bachuareview/video/7236713258948840712?lang=en
+match = -127.8%%
+title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
+url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -94.4%%
+title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
 
 [www.proz.com]
 match = -183.3%%
